--- a/kounetportfoliocQRS/getwayservice/src/main/resources/application.properties
+++ b/kounetportfoliocQRS/getwayservice/src/main/resources/application.properties
@@ -8,3 +8,7 @@ management.endpoints.web.exposure.include=info,health,gateway
 spring.config.import=optional:configserver:http://configservice:9999
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+info.app.name=Gateway Service
+info.app.description=Spring Cloud Gateway for Polyinformatique
+info.app.version=1.0.0
+
