--- a/kounetportfoliocQRS/ecommercePolyinformatique/ecPolyCommand/src/main/resources/application.properties
+++ b/kounetportfoliocQRS/ecommercePolyinformatique/ecPolyCommand/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+cloud.aws.credentials.access-key=gLC3cmonjcfQoIyq5988
+cloud.aws.credentials.secret-key=eR6RWTYlBavtKvcIfGSjtCmU6FGUCzjR3hSJQi9Q
+cloud.aws.s3.bucket=polyinformatique
+cloud.aws.s3.endpoint=https://s3.ca-central-1.idrivee2-64.com
+cloud.aws.region.static=Montréal
