--- a/kounetportfoliocQRS/pom.xml
+++ b/kounetportfoliocQRS/pom.xml
@@ -37,6 +37,7 @@
 			<version>4.10.3</version>
 		</dependency>
 
+
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
@@ -129,10 +130,24 @@
 			<version>2.8.4</version>
 		</dependency>
 
+				<dependency>
+					<groupId>software.amazon.awssdk</groupId>
+					<artifactId>bom</artifactId>
+					<version>2.25.7</version>
+					<type>pom</type>
+					<scope>import</scope>
+				</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 			<version>4.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.25.27</version>
 		</dependency>
 
 		<dependency>
