--- a/kounetportfoliocQRS/compose.yaml
+++ b/kounetportfoliocQRS/compose.yaml
@@ -56,9 +56,9 @@ services:
     container_name: keycloak
     environment:
       KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://polyinfDb:5432/keycloak_kounet_db
-      KC_DB_USERNAME: keycloak
-      KC_DB_PASSWORD: k1234
+      KC_DB_URL: jdbc:postgresql://polyinfDb:5432/polyinfDb
+      KC_DB_USERNAME: admin
+      KC_DB_PASSWORD: 1234
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_HTTP_ENABLED: "true"
